# goo-format-analyzer

./: .gitignore  CMakeLists.txt  goo_defs.hpp  main.cpp  parse_options.cpp  print_file.cpp  read_file.cpp  rgb565_decode.cpp  rle_decode.cpp  unpack_file.cpp  utility.hpp
.github/workflows/: ci_build.yml  find_binary.py
